<resources>
    <string name="appname">Dot Vpn</string>
    <string name="email">E-mail</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="forgot">Forgot password?</string>
    <string name="signin">Sign in</string>
    <string name="signup">Don\'t have an account? Sign up</string>
    <string name="dosignup">Sign up</string>
    <string name="email_empty">Email cannot be empty!</string>
    <string name="password_empty">Password cannot be empty!</string>
    <string name="name_empty">Name cannot be empty!</string>
    <string name="sdisconnected">disconnected</string>
    <string name="sconnecting">connecting</string>
    <string name="sconnected">connected</string>
    <string name="sconnerror">connection error</string>
    <string name="sauthfailed">authentication failed</string>
    <string name="sexiting">exiting</string>
    <string name="network_error">Network error</string>
    <string name="no_data_connection">This app requires a working data connection</string>
    <string name="app_close">The application will exit now</string>
    <string name="close">Close</string>
    <string name="millis">ms</string>
    <string name="kilometers">km</string>
    <string name="traffic_title_in">Data received</string>
    <string name="traffic_title_out">Data sent</string>
    <string name="error_identifying">Error identifying with the server</string>
    <string name="error_registering_user">Error registering user</string>
    <string name="user_signed_in">signed in</string>
    <string name="user_signed_up">signed up</string>
    <string name="wrong_user_or_pass">Wrong user name or password</string>
    <string name="wrong_email_address">Wrong email address</string>
    <string name="user_already_exists">This user already exists</string>
    <string name="app_version">App Version</string>
    <string name="auto_connect">Automatic Connect</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="contact_support">Contact Support</string>
    <string name="manage_account">Manage Account</string>
    <string name="tunknown">Unknown</string>
    <string name="spublicaddress">Public Address</string>
    <string name="sprivateaddress">Private Address</string>
    <string name="sserverlocation">Server Location</string>
    <string name="spingserver">Ping to Server</string>
    <string name="sdistanceserver">Distance to Server</string>
    <string name="sprotocoltype">Protocol Type</string>
    <string name="sfirewall">DotVpn Firewall</string>
    <string name="unknown">unknown</string>
    <string name="inactive">inactive</string>
    <string name="active">active</string>
    <string name="suerror">Error executing su command</string>
    <string name="exception">An exception occurred</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="useLZO">LZO Compression</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="client_key_title">Client Certificate Key</string>
    <string name="client_pkcs12_title">PKCS12 File</string>
    <string name="ca_title">CA Certificate</string>
    <string name="no_certificate">You must select a certificate</string>
    <string name="vpn_type">Type</string>
    <string name="pkcs12pwquery">PKCS12 Password</string>
    <string name="file_select">Select…</string>
    <string name="file_nothing_selected">You must select a file</string>
    <string name="useTLSAuth">Use TLS Authentication</string>
    <string name="tls_direction">TLS Direction</string>
    <string name="ipv6_dialog_tile">Enter IPv6 Address/Netmask in CIDR Format (e.g. 2000:dd::23/64)</string>
    <string name="ipv4_dialog_title">Enter IPv4 Address/Netmask in CIDR Format (e.g. 1.2.3.4/24)</string>
    <string name="ipv4_address">IPv4 Address</string>
    <string name="ipv6_address">IPv6 Address</string>
    <string name="custom_option_warning">Enter custom OpenVPN options. Use with caution. Also note that many of the tun related OpenVPN settings cannot be supported by design of the VPNSettings. If you think an important option is missing contact the author</string>
    <string name="static_keys_info">For the static configuration the TLS Auth Keys will be used as static keys</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_name_prompt">Enter a name identifying the new Profile</string>
    <string name="duplicate_profile_name">Please enter a unique Profile Name</string>
    <string name="profilename">Profile Name</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="no_error_found">No error found</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="pw_query_hint">(leave empty to query on demand)</string>
    <string name="vpn_shortcut">SafeIP Shortcut</string>
    <string name="vpn_launch_title">Connect to VPN</string>
    <string name="shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="random_host_prefix">Random Host Prefix</string>
    <string name="random_host_summary">Adds 6 random chars in front of hostname</string>
    <string name="custom_config_title">Enable Custom Options</string>
    <string name="custom_config_summary">Specify custom options. Use with care!</string>
    <string name="cancel_connection_long">Disconnect VPN</string>
    <string name="clear_log">clear log</string>
    <string name="title_cancel">Cancel Confirmation</string>
    <string name="cancel_connection_query">Do you want to disconnect?</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="check_remote_tlscert">Checks whether the server uses a certificate with TLS Server extensions (--remote-cert-tls server)</string>
    <string name="check_remote_tlscert_title">Expect TLS server certificate</string>
    <string name="remote_tlscn_check_summary">Checks the Remote Server Certificate Subject DN</string>
    <string name="remote_tlscn_check_title">Certificate Hostname Check</string>
    <string name="enter_tlscn_dialog">Specify the check used to verify the remote certificate DN (e.g. C=DE, L=Paderborn, OU=Avian IP Carriers, CN=openvpn.safeip.com)\n\nSpecify the complete DN or the RDN (openvpn.safeip.com in the example) or an RDN prefix for verification.\n\nWhen using RDN prefix \"Server\" matches \"Server-1\" and \"Server-2\"\n\nLeaving the text field empty will check the RDN against the server hostname.\n\nFor more details see the OpenVPN 2.3.1+ manpage under —verify-x509-name</string>
    <string name="enter_tlscn_title">Remote certificate subject</string>
    <string name="tls_key_auth">Enables the TLS Key Authentication</string>
    <string name="tls_auth_file">TLS Auth File</string>
    <string name="pull_on_summary">Requests IP addresses, routes and timing options from the server.</string>
    <string name="pull_off_summary">No information is requested from the server. Settings need to be specified below.</string>
    <string name="use_pull">Pull Settings</string>
    <string name="dns">DNS</string>
    <string name="override_dns">Override DNS Settings by Server</string>
    <string name="dns_override_summary">Use your own DNS Servers</string>
    <string name="searchdomain">searchDomain</string>
    <string name="dns1_summary">DNS Server to be used.</string>
    <string name="dns_server">DNS Server</string>
    <string name="secondary_dns_message">Secondary DNS Server used if the normal DNS Server cannot be reached.</string>
    <string name="backup_dns">Backup DNS Server</string>
    <string name="ignored_pushed_routes">Ignore pushed routes</string>
    <string name="ignore_routes_summary">Ignore routed pushed by the server.</string>
    <string name="default_route_summary">Redirects all Traffic over the VPN</string>
    <string name="use_default_title">Use default Route</string>
    <string name="custom_route_message">Enter custom routes. Only enter destination in CIDR format. \"10.0.0.0/8 2002::/16\" would direct the networks 10.0.0.0/8 and 2002::/16 over the VPN.</string>
    <string name="custom_routes_title">Custom Routes</string>
    <string name="log_verbosity_level">Log verbosity level</string>
    <string name="float_summary">Allows authenticated packets from any IP</string>
    <string name="float_title">Allow floating server</string>
    <string name="custom_options_title">Custom Options</string>
    <string name="edit_vpn">Edit VPN Settings</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="tun_error_helpful">On some custom ICS images the permission on /dev/tun might be wrong, or the tun module might be missing completely. For CM9 images try the fix ownership option under general settings</string>
    <string name="tun_open_error">Failed to open the tun interface</string>
    <string name="last_openvpn_tun_config">Opening tun interface:</string>
    <string name="local_ip_info">Local IPv4: %1$s/%2$d IPv6: %3$s MTU: %4$d</string>
    <string name="dns_server_info">DNS Server: %1$s, Domain: %2$s</string>
    <string name="routes_info">Routes: %s</string>
    <string name="routes_info6">Routes IPv6: %s</string>
    <string name="ip_not_cidr">Got interface information %1$s and %2$s, assuming second address is peer address of remote. Using /32 netmask for local IP. Mode given by OpenVPN is \"%3$s\".</string>
    <string name="route_not_cidr">Cannot make sense of %1$s and %2$s as IP route with CIDR netmask, using /32 as netmask.</string>
    <string name="route_not_netip">Corrected route %1$s/%2$s to %3$s/%2$s</string>
    <string name="keychain_access">Cannot access the Android Keychain Certificates. This can be caused by a firmware upgrade or by restoring a backup of the app/app settings. Please edit the VPN and reselect the certificate under basic settings to recreate the permission to access the certificate.</string>
    <string name="send_logfile">Send log file</string>
    <string name="send">Send</string>
    <string name="ics_openvpn_log_file">ICS OpenVPN log file</string>
    <string name="copied_entry">Copied log entry to clip board</string>
    <string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
    <string name="encryption">Encryption</string>
    <string name="cipher_dialog_title">Enter encryption method</string>
    <string name="chipher_dialog_message">Enter the encryption cipher algorithm used by OpenVPN. Leave empty to use default cipher.</string>
    <string name="auth_dialog_message">Enter the authentication digest used for OpenVPN. Leave empty to use default digest.</string>
    <string name="settings_auth">Authentication/Encryption</string>
    <string name="file_explorer_tab">File Explorer</string>
    <string name="inline_file_tab">Inline File</string>
    <string name="error_importing_file">Error importing File</string>
    <string name="import_error_message">Could not import File from filesystem</string>
    <string name="inline_file_data">[[Inline file data]]</string>
    <string name="opentun_no_ipaddr">Refusing to open tun device without IP information</string>
    <string name="menu_import">Import Profile from ovpn file</string>
    <string name="menu_import_short">Import</string>
    <string name="import_content_resolve_error">Could not read Profile to import</string>
    <string name="error_reading_config_file">Error reading config file</string>
    <string name="add_profile">add Profile</string>
    <string name="redirects_you_to_dashboard">Redirects to your Dashboard</string>
</resources>